--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+html, body{
+    height: 100%;
+}
+
 *{
     font-size: 14px;
     font-family: arial, sans-serif;
@@ -7,26 +11,70 @@
 }
 .page{
     display:flex;
-    flex-direction:column;
+    margin: 0 auto;
+    min-height: 100vh;
+    flex-direction: column;
+    flex-wrap: wrap;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
 }
 
-a{
-    color: #222;
+.main{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    flex-direction: column;
+}
+
+.menu a{
+    color: #000;
+    opacity: 0.75;
     text-decoration:none;
+    line-height: 28px;
 }
 
-a:hover{
+.top-menu a{
+    padding-left: 15px;
+}
+
+.bottom-menu a{
+    padding-left: 27px;
+    line-height: 40px;
+}
+
+.origin{
+    margin-left: 27px; 
+    color: rgba(0,0,0,.54);
+    font-size: 15px;
+    text-align: right;
+    line-height: 40px;
+}
+
+.bottom-menu{
+    position:fixed;
+    width:100%;
+    bottom:0;
+    left: 0;
+    right: 0;
+    border-top: 1px solid #dadce0;
+    background: #f2f2f2;
+}
+
+.menu a:hover{
     text-decoration: underline;
 }
 
 ul {
     list-style-type: none;
-
 }
+
 
 .logo{
     display:block;
-    
     margin-left: auto;
     margin-right: auto;
     text-align:center;
@@ -39,30 +87,70 @@ ul {
 }
 
 .left-menu a{
-    display:block;
     float:left;
-    margin-left: 8px;
-    margin-top: 10px;
 }
 
-.right-menu a{
+.right-menu a{ 
     float:right;
-    margin-left: 8px;
-    margin-top: 10px;
 }
+
+.top-menu a{
+    font-size: 13px;
+    margin: 7px 0 0 0;
+    position: relative;
+    top: 16px;
+}
+
+.right-menu .sign-in{
+    border: 1px solid #4285f4;
+    font-weight: bold;
+    outline: none;
+    background: -moz-linear-gradient(top,#4387fd,#4683ea);
+    line-height: 28px;
+    padding: 0 12px;
+    border-radius: 2px;
+    margin-left: 15px;
+}
+
+.right-menu .sign-in:hover{
+    cursor: default;
+    text-decoration: none;
+}
+/*.top-menu .left-menu a{
+    margin: 7px 0 0 10px;
+    position: relative;
+    top: 16px;
+    /*padding-left: 15px; distance between top menu */
+/*}
+
+.top-menu .right-menu a{
+    margin: 7px 0 0 10px;
+    position: relative;
+    top: 16px;
+    /*padding left: 15px; distance between top menu */
+/*}*/
 
 .search:before{
     content:"";
     position:absolute;
-    background-image: url("data:image/svg+xml,%3Csvg class='search-logo' focusable='false' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' style='width: 24px; height: 24px;'%3E%3Cpath d='M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z'%3E%3C/path%3E%3C/svg%3E");
-    width: 24px;
+    background-image: url("data:image/svg+xml,%3Csvg class='search-logo' focusable='false' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath d='M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z'%3E%3C/path%3E%3C/svg%3E");
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 20px;
     top: 0;
     bottom: 0;
     left: 10px;
-    
 }
 
 .search{
     padding: 10px 30px;
     border-radius: 10px;
+    width:100%;
+    height:100%;
+}
+
+.top-menu{
+    position:fixed;
+    width: 100%;
+    top: 0;
 }
