--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ html, body{
     line-height: 40px;
 }
 
-.origin{
+.canada{
     margin-left: 27px; 
     color: rgba(0,0,0,.54);
     font-size: 15px;
@@ -80,10 +80,8 @@ ul {
     text-align:center;
 }
 
-.search-logo{
-    display:block;
-    width: 24px;
-    height: 24px;
+.top-menu .left-menu{
+    margin: 7px 0 0 10px;
 }
 
 .left-menu a{
@@ -96,9 +94,14 @@ ul {
 
 .top-menu a{
     font-size: 13px;
-    margin: 7px 0 0 0;
     position: relative;
     top: 16px;
+}
+
+.top-menu{
+    position:fixed;
+    width: 100%;
+    top: 0;
 }
 
 .right-menu .sign-in{
@@ -130,27 +133,78 @@ ul {
     /*padding left: 15px; distance between top menu */
 /*}*/
 
-.search:before{
-    content:"";
-    position:absolute;
-    background-image: url("data:image/svg+xml,%3Csvg class='search-logo' focusable='false' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath d='M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z'%3E%3C/path%3E%3C/svg%3E");
-    background-repeat: no-repeat;
-    background-position: center;
-    width: 20px;
-    top: 0;
-    bottom: 0;
-    left: 10px;
+.search-bar{
+    display:flex;
+    width: 582px;
+    margin: 0 auto;
+    height: 44px;
+    border-radius: 24px;
+    border: 1px solid #dfe1e5;
+    background: #fff;
+    box-shadow:none;
+    align-items:center;
 }
 
 .search{
-    padding: 10px 30px;
-    border-radius: 10px;
-    width:100%;
-    height:100%;
+    display:flex;
+    flex:100%;
+    background:transparent;
+    border:none;
+    font-size: 16px;
+    height: 34px !important;
 }
 
-.top-menu{
-    position:fixed;
-    width: 100%;
-    top: 0;
+.search-input{
+    display:flex;
+    /*padding:5px 8px 0 16px;*/
+    padding-left: 14px;
+
 }
+
+.search-logo{
+    display:flex;
+    align-items:center;
+    width: 20px;
+    height: 20px;
+    fill:#9aa0a6;
+    line-height:24px;
+}
+
+.search-form{
+    display:flex;
+    flex-direction:column;
+}
+
+.search-button{
+    display:flex;
+    flex-direction:row;
+    justify-content: center;
+    padding-top:18px;
+}
+
+.sb{
+    height: 70px;
+}
+
+.francais{
+    line-height: 28px;
+    margin-top:12px;
+    font-size:small;
+}
+
+main input[type="submit"]{
+    cursor: pointer;
+    height: 36px;
+    line-height: 27px;
+    height: 36px;
+    min-width: 54px;
+    text-align:center;
+    padding: 0 16px;
+    margin: 11px 4px;
+    font-size: 14px;
+    font-family: arial, sans-serif;
+    border-radius: 4px;
+    background-color: #f8f9fa;
+    /*box-shadow: 0 1px 1px rgba(0,0,0,0.1);*/
+    box-shadow:none;
+} 
